<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/eventNameDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/eventIdDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_id_placeholder"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:paddingTop="4dp"/>

    <TextView
        android:id="@+id/eventDescriptionDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_description_placeholder"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/eventDateDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date_placeholder"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/eventLocationDetailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location_placeholder"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/userIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id_placeholder"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:paddingTop="12dp"/>


    <TextView
        android:id="@+id/eventTokenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Used Token: "
        android:textStyle="italic"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnJoinEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_event"
        android:backgroundTint="@color/primary_blue"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:layout_gravity="center"/>

</LinearLayout>