<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Event Name -->

    <!-- Event Description -->

    <!-- Event Date -->

    <!-- Event Location -->

    <!-- Save Button -->

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:autofillHints="name"
        android:hint="@string/event_name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="description"
        android:hint="@string/event_description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <EditText
        android:id="@+id/editTextEventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="date"
        android:hint="@string/event_date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDescription" />

    <EditText
        android:id="@+id/editTextEventLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="address"
        android:hint="@string/event_location"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDate" />

    <Button
        android:id="@+id/buttonSaveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minHeight="48dp"
        android:text="@string/save_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEventLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>